# WareBotFlaskandROS

./: README.md  commands.txt  docker-compose.yml  navigation.txt
DOCS/: BACKEND_ROS2_INTEGRATION.md
backend/: .env  Dockerfile  main.py  requirements.txt
backend/app/: __init__.py  auth_routes.py  config.py  dashboard.py  extensions.py  models.py  mqtt_client.py  routes.py  services.py  shelf_routes.py
backend/app/core/: __init__.py  exceptions.py
backend/app/events/: socket_events.py
backend/app/mqtt/: base_handler.py  telemetry_handler.py
backend/app/repositories/: __init__.py  robot_repository.py
backend/app/routes/: __init__.py  api_dashboard.py  api_images.py  api_maps.py  api_products.py  api_reference_points.py  api_robots.py  api_shelves.py  api_stock.py  api_task_assignment.py  api_tasks.py  api_zones.py  task_realtime_routes.py  task_websocket.py  ws_live_updates.py
backend/app/services/: __init__.py  admin_service.py  apriltag_service.py  base_service.py  dashboard_service.py  minio_service.py  product_service.py  robot_service.py  ros2_integration.py  shelf_location_service.py  shelf_service.py  stock_service.py  task_service.py  utils_service.py
backend/tests/: repro_drop_validation.py  repro_race_condition.py  repro_task_assignment.py
grafana/provisioning/dashboards/: dashboard.yml  warebot-dashboard.json
grafana/provisioning/datasources/: influxdb.yml
hivemq-config/: config.xml
mp400_apriltag_align/: package.xml  setup.cfg  setup.py
mp400_apriltag_align/launch/: apriltag_align_launch.py
mp400_apriltag_align/mp400_apriltag_align/: apriltag_align.py
mp400_apriltag_align/mp400_apriltag_align/config/: tvecs.npy
mp400_footprint_switcher/: CMakeLists.txt  INSTALLATION_GUIDE.md  README.md  package.xml  setup.cfg  setup.py
mp400_footprint_switcher/config/: footprints.yaml
mp400_footprint_switcher/examples/: footprint_switcher_client.py
mp400_footprint_switcher/launch/: footprint_switcher.launch.py
mp400_footprint_switcher/mp400_footprint_switcher/: __init__.py  footprint_switcher_node.py
mp400_footprint_switcher/resource/: mp400_footprint_switcher
scripts/: backfill_storage_coords.py
tests/: test_shelf_location.py  test_task_status_restore.py
warebot_fleet/: CMakeLists.txt  package.xml  setup.cfg  setup.py
warebot_fleet/warebot_fleet/: map_to_mqtt.py  robot_state_mqtt_bridge.py
warebot_map_merger/: package.xml  setup.cfg  setup.py
warebot_map_merger/launch/: map_merger.launch.py
warebot_map_merger/warebot_map_merger/: map_merger_node.py  mqtt_publisher.py
warebot_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
warebot_robot/warebot_robot/: mqtt_task_executor.py
warebot_robot_bridge/: package.xml  setup.cfg  setup.py
warebot_robot_bridge/install/: local_setup.sh  setup.sh
warebot_robot_bridge/install/warebot_robot_bridge/lib/warebot_robot_bridge/: robot_monitor_mqtt
warebot_robot_bridge/install/warebot_robot_bridge/share/warebot_robot_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh  robot_monitor.launch.py
warebot_robot_bridge/log/: latest_build
warebot_robot_bridge/warebot_robot_bridge/: robot_monitor_mqtt.py
warebot_task_navigator/: package.xml  setup.cfg  setup.py
warebot_task_navigator/launch/: task_navigator.launch.py
warebot_task_navigator/resource/: warebot_task_navigator
warebot_task_navigator/warebot_task_navigator/: __init__.py  all_nodes.launch.py  reference_point_manager.py  task_executor.py  task_navigator.py
warebot_task_runner/: package.xml  setup.cfg  setup.py
warebot_task_runner/config/: dist_coeffs.npy  locations.yaml  task_runner.yaml
warebot_task_runner/data/calibration/: calibration.npy  camera_matrix.npy  rvecs.npy
warebot_task_runner/launch/: simulation_fleet.launch.py  task_runner.launch.py
warebot_task_runner/warebot_task_runner/: __init__.py  constants.py  enums.py  main.py  robot_monitor.py  robot_task_runner.py  task_runner.py
warebot_task_runner/warebot_task_runner/controllers/: __init__.py  linear_actuator.py
warebot_task_runner/warebot_task_runner/core/: __init__.py  alignment_controller.py  mqtt_handler.py  navigation_handler.py  task_manager.py
warebot_task_runner/warebot_task_runner/utils/: __init__.py  helpers.py  pid_controller.py
