<?xml version="1.0"?>
<package format="3">
  <name>mp400_footprint_switcher</name>
  <version>0.1.0</version>
  <description>Dynamic footprint switching for MP-400</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
