<?xml version="1.0"?>
<package format="3">
  <name>warebot_fleet</name>
  <version>0.1.0</version>
  <description>MQTT fleet bridge for MP-400 robots</description>

  <maintainer email="super@super.com">Osama</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>paho-mqtt</exec_depend>

</package>
