<?xml version="1.0"?>
<package format="3">
  <name>warebot_map_merger</name>
  <version>0.0.1</version>
  <description>Centralized multi-robot map merger for the WareBot system.</description>

  <maintainer email="osama@example.com">Osama</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
