<?xml version="1.0"?>
<package format="3">
  <name>warebot_robot</name>
  <version>0.1.0</version>
  <description>Robot task executor for MP-400</description>

  <maintainer email="osama@super.ai">Osama</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>paho-mqtt</exec_depend>
</package>
