<?xml version="1.0"?>
<package format="3">
  <name>warebot_robot_bridge</name>
  <version>0.0.0</version>
  <description>Robot telemetry monitor and MQTT bridge</description>

  <maintainer email="robot@example.com">osama</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
